--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Copy HTML to Clipboard</title>
+  <title>Ultimative Story Template</title>
   <style>
     .toast {
       position: fixed;
